Source/DocuEye.Linter.Expressions/LinterExpressionsParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c:/nCode/docueye/Source/DocuEye.Linter.Expressions/LinterExpressions.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class LinterExpressionsParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, ELEMENT=4, ELEMENT_TAG=5, TEXT=6, DOT=7, EQUALS=8, 
		NOTEQUALS=9, IN=10, NOTIN=11, NULL=12, WHITESPACE=13;
	public const int
		RULE_elementExpression = 0, RULE_elementTagExpr = 1, RULE_expressionValue = 2;
	public static readonly string[] ruleNames = {
		"elementExpression", "elementTagExpr", "expressionValue"
	};

	private static readonly string[] _LiteralNames = {
		null, "'['", "','", "']'", null, null, null, "'.'", "'=='", "'!='", "'in'", 
		"'notin'", "'null'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, "ELEMENT", "ELEMENT_TAG", "TEXT", "DOT", "EQUALS", 
		"NOTEQUALS", "IN", "NOTIN", "NULL", "WHITESPACE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "LinterExpressions.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static LinterExpressionsParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public LinterExpressionsParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public LinterExpressionsParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ElementExpressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ElementTagExprContext[] elementTagExpr() {
			return GetRuleContexts<ElementTagExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ElementTagExprContext elementTagExpr(int i) {
			return GetRuleContext<ElementTagExprContext>(i);
		}
		public ElementExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_elementExpression; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILinterExpressionsVisitor<TResult> typedVisitor = visitor as ILinterExpressionsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitElementExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ElementExpressionContext elementExpression() {
		ElementExpressionContext _localctx = new ElementExpressionContext(Context, State);
		EnterRule(_localctx, 0, RULE_elementExpression);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 9;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==ELEMENT_TAG) {
				{
				{
				State = 6;
				elementTagExpr();
				}
				}
				State = 11;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ElementTagExprContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ELEMENT_TAG() { return GetToken(LinterExpressionsParser.ELEMENT_TAG, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUALS() { return GetToken(LinterExpressionsParser.EQUALS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NOTEQUALS() { return GetToken(LinterExpressionsParser.NOTEQUALS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionValueContext[] expressionValue() {
			return GetRuleContexts<ExpressionValueContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionValueContext expressionValue(int i) {
			return GetRuleContext<ExpressionValueContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IN() { return GetToken(LinterExpressionsParser.IN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NOTIN() { return GetToken(LinterExpressionsParser.NOTIN, 0); }
		public ElementTagExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_elementTagExpr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILinterExpressionsVisitor<TResult> typedVisitor = visitor as ILinterExpressionsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitElementTagExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ElementTagExprContext elementTagExpr() {
		ElementTagExprContext _localctx = new ElementTagExprContext(Context, State);
		EnterRule(_localctx, 2, RULE_elementTagExpr);
		int _la;
		try {
			State = 32;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 12;
				Match(ELEMENT_TAG);
				State = 13;
				_la = TokenStream.LA(1);
				if ( !(_la==EQUALS || _la==NOTEQUALS) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 15;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 14;
					expressionValue();
					}
					}
					State = 17;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( _la==TEXT || _la==NULL );
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 19;
				Match(ELEMENT_TAG);
				State = 20;
				_la = TokenStream.LA(1);
				if ( !(_la==IN || _la==NOTIN) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 21;
				Match(T__0);
				State = 22;
				expressionValue();
				State = 27;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==T__1) {
					{
					{
					State = 23;
					Match(T__1);
					State = 24;
					expressionValue();
					}
					}
					State = 29;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 30;
				Match(T__2);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionValueContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TEXT() { return GetToken(LinterExpressionsParser.TEXT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NULL() { return GetToken(LinterExpressionsParser.NULL, 0); }
		public ExpressionValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expressionValue; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILinterExpressionsVisitor<TResult> typedVisitor = visitor as ILinterExpressionsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpressionValue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionValueContext expressionValue() {
		ExpressionValueContext _localctx = new ExpressionValueContext(Context, State);
		EnterRule(_localctx, 4, RULE_expressionValue);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 34;
			_la = TokenStream.LA(1);
			if ( !(_la==TEXT || _la==NULL) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}


	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN);


}
